[gd_scene load_steps=8 format=3 uid="uid://cmlp6sq55ocaf"]

[ext_resource type="Script" path="res://actors/Transition/Transition.gd" id="1_ux3sc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cjg88"]
radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cfn4o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mqbrt"]
radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_njgbv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_570sw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nuy7o"]

[node name="Transition" type="Node2D"]
script = ExtResource("1_ux3sc")

[node name="Head" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource("CircleShape2D_cjg88")

[node name="Head-MouseDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head-MouseDetect"]
shape = SubResource("CircleShape2D_cfn4o")

[node name="Tail" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tail"]
shape = SubResource("CircleShape2D_mqbrt")

[node name="Tail-MouseDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tail-MouseDetect"]
shape = SubResource("CircleShape2D_njgbv")

[node name="HeadControl" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadControl"]
shape = SubResource("CircleShape2D_570sw")

[node name="TailControl" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TailControl"]
shape = SubResource("CircleShape2D_nuy7o")

[connection signal="area_entered" from="Head" to="." method="_on_head_area_entered"]
[connection signal="area_exited" from="Head" to="." method="_on_head_area_exited"]
[connection signal="mouse_entered" from="Head-MouseDetect" to="." method="_on_head_mouse_detect_mouse_entered"]
[connection signal="mouse_exited" from="Head-MouseDetect" to="." method="_on_head_mouse_detect_mouse_exited"]
[connection signal="area_entered" from="Tail" to="." method="_on_tail_area_entered"]
[connection signal="area_exited" from="Tail" to="." method="_on_tail_area_exited"]
[connection signal="mouse_entered" from="Tail-MouseDetect" to="." method="_on_tail_mouse_detect_mouse_entered"]
[connection signal="mouse_exited" from="Tail-MouseDetect" to="." method="_on_tail_mouse_detect_mouse_exited"]
